--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-iframes": "0.0.16",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
